refactor!: modernize to records, sealed types, and hexformat
Convert ZippedFile to an immutable record, seal ICompress and
TorrentZipOptions, and replace commons-codec with JDK HexFormat.
Switch expressions and Path.of keep torrentzip bytes identical.

BREAKING CHANGE: ZippedFile accessors and Program's options
implementation are no longer the old bean/interface shape.